fix: fix overflow of some component

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -76,7 +76,7 @@
     max-width: 45%;
     position: absolute;
     top: -10rem;
-    left: 0rem;
+    left: -1.5rem;
     height: 110vh;
     z-index: -1;
     
